WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296738
REGRESSION(
297498@main
): [WPE] build broken when using API 1.1
https://bugs.webkit.org/show_bug.cgi?id=296738
Summary
REGRESSION(297498@main): [WPE] build broken when using API 1.1
Miguel Gomez
Reported
2025-07-31 05:36:09 PDT
The error is /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp: In constructor ‘_WebKitJavascriptResult::_WebKitJavascriptResult(WebKit::JavaScriptEvaluationResult&&)’: /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:39:19: error: invalid use of incomplete type ‘class WebKit::JavaScriptEvaluationResult’ 39 | jsValue = result.toJSC(); | ^~~~~~ In file included from /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:26: /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResultPrivate.h:26:7: note: forward declaration of ‘class WebKit::JavaScriptEvaluationResult’ 26 | class JavaScriptEvaluationResult; | ^~~~~~~~~~~~~~~~~~~~~~~~~~ /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp: At global scope: /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:49:54: error: ‘WebKitJavascriptResult* webkitJavascriptResultCreate’ redeclared as different kind of entity 49 | WebKitJavascriptResult* webkitJavascriptResultCreate(WebCore::SerializedScriptValue& serializedScriptValue) | ^~~~~~~ /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResultPrivate.h:28:25: note: previous declaration ‘WebKitJavascriptResult* webkitJavascriptResultCreate(WebKit::JavaScriptEvaluationResult&&)’ 28 | WebKitJavascriptResult* webkitJavascriptResultCreate(WebKit::JavaScriptEvaluationResult&&); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:49:54: error: ‘WebCore’ has not been declared 49 | WebKitJavascriptResult* webkitJavascriptResultCreate(WebCore::SerializedScriptValue& serializedScriptValue) | ^~~~~~~ /host/home/magomez/webkit/WebKit/Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:49:86: error: ‘serializedScriptValue’ was not declared in this scope 49 | WebKitJavascriptResult* webkitJavascriptResultCreate(WebCore::SerializedScriptValue& serializedScriptValue) and it happens because webkitJavascriptResultCreate was modified to receive a WebKit::JavaScriptEvaluationResult&& instead of a WebCore::SerializedScriptValue&, but this modification was done only in the function declaration. There's also missing include of JavaScriptEvaluationResult.h that can cause an unified build error.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2025-07-31 05:44:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48770
EWS
Comment 2
2025-07-31 23:50:46 PDT
Committed
298116@main
(cc5fa20e86a3): <
https://commits.webkit.org/298116@main
> Reviewed commits have been landed. Closing PR #48770 and removing active labels.
Jim Mason
Comment 3
2025-08-09 05:08:15 PDT
Duplicate of
Bug 296525
. Closing the older bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug