REGRESSION(297498@main): [WPE] build broken when using API 1.1 https://bugs.webkit.org/show_bug.cgi?id=296738

Reviewed by Carlos Garcia Campos.

Update the webkitJavascriptResultCreate() function so it receives a
WebKit::JavaScriptEvaluationResult&& parameter instead of a
WebCore::SerializedScriptValue& one.

Also, add a missing JavaScriptEvaluationResult.h include.

* Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:
(webkitJavascriptResultCreate):

Canonical link: https://commits.webkit.org/298116@main